...
<com.stone.booklibrary.viewpods.CustomBookViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.stone.booklibrary.viewpods.CircularImageView
        android:id="@+id/ivCancel"
        android:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_alignBottom="@id/rvBookCategory"
        android:layout_centerVertical="true"
        android:padding="@dimen/margin_medium"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:tint="@color/color_dark_grey"
        app:srcCompat="@drawable/ic_baseline_close_24"
...
        android:layout_marginVertical="@dimen/margin_medium_2"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_below="@id/rvBookCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSortList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_sort_24"
            android:layout_alignParentStart="true"
            />
        <androidx.appcompat.widget.AppCompatTextView
...
            android:textSize="@dimen/text_small"
            android:text="Recent"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="@dimen/margin_large"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_list_view_24"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookList"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:clipToPadding="true"
        android:layout_below="@id/rlSortList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_book_style_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookSmallList"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:clipToPadding="true"
        android:layout_below="@id/rlSortList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
...
