...
    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_below="@id/tvViewAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdRecent"
            android:text="@string/recent_open"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdTitle"
            android:text="@string/title"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAuthor"
            android:text="@string/author"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
...
