<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/lbl_home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_24"/>
    <item
        android:id="@+id/menu_library"
        android:title="@string/lbl_library"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_library_24"
        />
</menu>